--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,7 +39,7 @@ services:
       - "27017"
 
   web:
-    image: qiuyanlong/nest_api_blog:v03
+    image: XXX/nest_api_blog:v03
     build: .
     restart: always
     # command: echo "hello world"  #bash -c 'while !</dev/tcp/db/3306; do sleep 1; done; npm -v'
